# BMI_Lecture4_PythonClustering

./: README.md  requirements.txt  setup.cfg
src/: run_kmeans.py
src/output/: List of outputs.txt
