[metadata]
name = KMeans_Iris-GulayBenguUlukaya
version = 0.0.1
author = Gulay Bengu Ulukaya
author_email = gulukay@emory.edu
description = A small example package that performs K Means clustering on Iris dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GulayBenguUlukaya/BMI_Lecture4_PythonClustering
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src